fix: schema-editor spacing

--- a/client/src/elements/schema-editor/schema-editor.css
+++ b/client/src/elements/schema-editor/schema-editor.css
@@ -5,7 +5,7 @@ schema-editor {
 schema-editor fieldset {
   border: none;
   padding: 0;
-  margin: 0;
+  margin: calc(var(--q-space-base) * 2) 0 calc(var(--q-space-base) / 2) 0;
 }
 
 schema-editor fieldset fieldset {
